--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
               <li class="nav-item px-2"><a class="nav-link fw-medium" href="#features">Events</a></li>
               <li class="nav-item px-2"><a class="nav-link fw-medium" href="#pricing">Social</a></li>
             </ul>
-            <form class="ps-lg-5">
+            <form class="ps-lg-5" action="https://slide-dashboard.vercel.app/">
               <button class="btn btn-lg btn-primary rounded-pill bg-gradient order-0" type="submit">Sign In</button>
             </form>
           </div>
